--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+
+        },
+        "files": [
+            "app/88"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
